# provider-db

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CNAME  Cargo.toml  Gemfile  README.md  _config.yml  build.rs  data.xml.template  fallback.html  index.html  index_new.html  index_old.html  mehl.cloud.md  new.html  rust-toolchain  searchIndex.js.template  systemausfall.org.md  testscript.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_provider.md  something-else.md
.github/workflows/: autotest.yml  jekyll.yml  validation.yml
_data/: strings.yml
_includes/: authentication.html
_layouts/: provider.html
_providers/: 163.md  1und1.de.md  acesttoi.fr  aktivix.org.md  aliyun.md  all-inkl.com.md  antagonist.nl.md  aol.md  arcor.de  arcor.de.md  autistici.org.md  bitmessage.ch.md  blindzeln.de.md  blindzeln.org.md  blinzeln.de.md  bluewin.ch.md  buzon.uy.md  c1.testrun.org.md  c10.testrun.org.md  c2.testrun.org.md  c3.testrun.org.md  c4.testrun.org.md  c5.testrun.org.md  c6.testrun.org.md  c7.testrun.org.md  c8.testrun.org.md  c9.testrun.org.md  chello.at.md  cock.li.md  comcast.md  daleth.cafe.md  dismail.de.md  disroot.md  dubby.org.md  e.email.md  espiv.net.md  example.com.md  fastmail.com.md  fastmail.md  firemail.de.md  (+68 more)
_providers/old/: aol.md  autistici.org.md  bluewin.ch.md  change-move.py  disroot.md  fastmail.com.md  freenet.de.md  gmx.net.md  hosteurope.md  hotmail.md  i.ua.md  kolst.com.md  mail.ru.md  mailbox.org.md  protonmail.md  rogers.com.md  strato.de.md  tiscali.it.md  ukr.net.md  verizon.md  ziggo.nl.md
assets/: normalize.css  search.js  styles.css
src/: lib.rs  main.rs  provider.rs
validation/: autotest.py  index.js  package-lock.json  package.json  pull-tb.py
