[package]
name = "deltachat-provider-database"
version = "0.1.0"
authors = ["simon <cargo@simonlaux.de>", "Hocuri"]
edition = "2018"
build = "build.rs"
license-file = "LICENSE"
description = "List of providers and how well they work with Deltachat"
homepage = "https://github.com/deltachat/provider-db"
repository = "https://github.com/deltachat/provider-db"

# exlcude "jekyll only"-stuff
exclude = [
    "_data/*",
    "_includes/*",
    "_layouts/*",
    "_site/*",
    "assets/*",
    "_config.yml",
    "fallback.html",
    "index.html",
    "Gemfile",
    "Gemfile.lock"
]

[dependencies]

[build-dependencies]
glob = "0.3.0"
regex = "1"
lazy_static = "1.3.0"
yaml-rust = "0.4.3"