[package]
name = "deltachat-provider-overview"
version = "0.1.1"
authors = ["simon <deltachat-provider-overview@simonlaux.de>", "Hocuri"]
edition = "2018"
build = "build.rs"
license-file = "LICENSE"
description = "[DEPRECATED]: please use the renamed package https://crates.io/crates/deltachat-provider-database https://github.com/deltachat/provider-db"
homepage = "https://github.com/deltachat/provider-overview"
repository = "https://github.com/deltachat/provider-overview"
maintenance = 'deprecated'

# exlcude "jekyll only"-stuff
exclude = [
    "_data/*",
    "_includes/*",
    "_layouts/*",
    "_site/*",
    "assets/*",
    "_config.yml",
    "fallback.html",
    "index.html",
    "Gemfile",
    "Gemfile.lock"
]

[dependencies]

[build-dependencies]
glob = "0.3.0"
regex = "1"
lazy_static = "1.3.0"
yaml-rust = "0.4.3"