[package]
name = "deltachat-provider-database"
version = "0.3.0"
authors = ["simon <cargo@simonlaux.de>", "Hocuri"]
edition = "2018"
build = "build.rs"
license-file = "LICENSE"
description = "List of providers and how well they work with Deltachat"
homepage = "https://github.com/deltachat/provider-db"
repository = "https://github.com/deltachat/provider-db"

# exlcude "jekyll only"-stuff
exclude = [
    "_data/*",
    "_includes/*",
    "_layouts/*",
    "_site/*",
    "assets/*",
    "_config.yml",
    "fallback.html",
    "index.html",
    "Gemfile",
    "Gemfile.lock"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.8"

[build-dependencies]
glob = "0.3.0"
regex = "1"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"